--- a/webapp/frontend/src/App.css
+++ b/webapp/frontend/src/App.css
@@ -1,4 +1,10 @@
 .app-container {
+  font-family: Roboto, sans-serif;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
   max-width: 600px;
   margin: auto;
   padding: 20px;
@@ -10,12 +16,13 @@
 
 .input-container {
   margin-bottom: 20px;
+  border-radius: 10px;
+  width: 100%;
 }
 
 textarea {
   width: 100%;
   height: 100px;
-  padding: 8px;
   margin-top: 5px;
   margin-bottom: 15px;
 }
@@ -43,4 +50,45 @@ h1 {
 
 h2 {
   color: #555;
+}
+
+.analyze-button {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 15px;
+  width: 100px;
+  margin-top: 10px;
+}
+
+.result-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  align-content: center;
+  align-items: center;
+}
+
+.result-true {
+  font-size: 20px;
+  color: red;
+  font-weight: bold;
+  background-color: rgba(255, 0, 0, 0.1);
+  padding: 2px;
+  width: 70%;
+  border-radius: 10px;
+}
+
+.result-false {
+  font-size: 20px;
+  color: green;
+  font-weight: bold;
+  background-color: rgba(0, 255, 0, 0.1);
+  padding: 2px;
+  width: 70%;
+  border-radius: 10px;
 }
